--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -48,7 +48,7 @@ extra:
     - icon: fontawesome/brands/instagram
       link: https://www.instagram.com/sunwayrobotics/
       name: Sunway Robotics Club
-copyright: Prepared for Sunway Robotics Club
+copyright: Prepared for Sunway Robotics Club [seru wus here ฅ^>⩊<^ ฅ]
 nav:
   - index.md
   - Tutorial 1 Leg Assembly and Calibration: "tutorial-leg.md"
